# CNNxRNN

./: README.md  main.py  pyproject.toml
cnn/: cnn.ipynb  cnn.py  main.py  train.py
lstm/: README.md  lstm.py  main.py  train.py
rnn/: main.py  rnn.py  train.py
src/: notebook.ipynb  pyproject.toml
src/cnn/: main.py  train.py
src/lstm/: main.py  vectorizer_config.npy  vectorizer_config_old.npy
src/rnn/: RNNTest.ipynb  main.py  rnn.py  train.py
